ログイン時とログアウト時のヘッダーを作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <header>
+      <%= render "layouts/header" %>
+    </header>
+    <hr> <%# 横罫線 %>
     <%= yield %>
   </body>
 </html>
