--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -3,6 +3,7 @@
     <%= f.label :name %>
     <%= f.text_field :name, required: true %>
   </p>
+  <p><%= f.file_field :image %></p>
   <p>
     <%= f.label :comment %>
     <%= f.text_area :comment %>
